# BalanceParser

./: .gitignore  LICENSE.txt  pyproject.toml  readme.md
src/: cli.py  config.py  const.py
src/bsutils/: logger.py  reader.py
src/classes/: statement_settings.py  statement_tables.py
src/classes/bank_settings/: __init__.py  base.py  citi_cc.py  dbs_acc.py  dbs_cc.py  uob_acc.py  uob_cc.py
